Base implementation of labels in breakpoint S, but needs simplyfication within scss partial

--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -92,7 +92,7 @@
 				height: 50px;
 
 				&.search_form_search_location {
-					margin: 15px 0;
+					margin: 15px 0 5px;
 					height: 50px;
 				}
 			}
