--- a/app/views/layouts/partials/_javascript_config.html.slim
+++ b/app/views/layouts/partials/_javascript_config.html.slim
@@ -1,6 +1,6 @@
 javascript:
-  document.Clarat.algolia_app_id = "#{Rails.application.secrets.algolia['app_id']}";
-  document.Clarat.algolia_pub_key = "#{Rails.application.secrets.algolia['pub_key']}";
-  document.Clarat.algolia_index = "#{Rails.application.secrets.algolia['index']}";
+  Clarat.algolia_app_id = "#{Rails.application.secrets.algolia['app_id']}";
+  Clarat.algolia_pub_key = "#{Rails.application.secrets.algolia['pub_key']}";
+  Clarat.algolia_index = "#{Rails.application.secrets.algolia['index']}";
 
   I18n.locale = "#{I18n.locale}";
