Fix typo on main page

--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -4,7 +4,7 @@ main.content-main.content-main--wide
     section.section-start.section-start--how
       h4.section-start__headline Wie funktioniert clarat?
       .section-start__body
-        p Sämtliche Unterstützungsangebote für Kinder, Jugendliche und Familien in Deiner Nähe. Gib Dein Anliegen ein und finde das Angebot, das Dir wirklich weiter hilft. Wir sagen Dir auch noch, was Du tun musst, was Du als nächstes tun musst, um das Angebot zu nutzen.
+        p Sämtliche Unterstützungsangebote für Kinder, Jugendliche und Familien in Deiner Nähe. Gib Dein Anliegen ein und finde das Angebot, das Dir wirklich weiter hilft. Wir sagen Dir auch noch, was Du als nächstes tun musst, um das Angebot zu nutzen.
 
     section.section-start.section-start--whom
       h4.section-start__headline Für wen ist clarat?
