--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -21,6 +21,7 @@
             h4.Listing-results__offerinfo
               - if offer.location
                 | <span class="Listing-results__emphasis Listing-results__organization">
+                / ToDo: Refactor
                 = offer.organizations.name
                 | </span>
                 = offer.location_address
