Wrapping organization output on offer#show in an unordered list, see #84

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,8 @@
 @import "modules/listing-results";
 @import "modules/listing-tags";
 @import "modules/listing-offers";
+@import "modules/listing-offers";
+@import "modules/listing-organizations";
 @import "modules/map";
 @import "modules/popup-content";
 @import "modules/flash-message";
