--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,11 +20,23 @@ html class='no-js' lang=I18n.locale
     meta property="og:site_name" content=""
     meta property="og:image" content=""
 
+    link rel="apple-touch-icon" sizes="57x57" href="/favicons/apple-touch-icon-57x57.png"
+    link rel="apple-touch-icon" sizes="60x60" href="/favicons/apple-touch-icon-60x60.png"
+    link rel="apple-touch-icon" sizes="72x72" href="/favicons/apple-touch-icon-72x72.png"
+    link rel="apple-touch-icon" sizes="76x76" href="/favicons/apple-touch-icon-76x76.png"
+    link rel="apple-touch-icon" sizes="114x114" href="/favicons/apple-touch-icon-114x114.png"
+    link rel="apple-touch-icon" sizes="120x120" href="/favicons/apple-touch-icon-120x120.png"
+    link rel="apple-touch-icon" sizes="144x144" href="/favicons/apple-touch-icon-144x144.png"
+    link rel="apple-touch-icon" sizes="152x152" href="/favicons/apple-touch-icon-152x152.png"
+    link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon-180x180.png"
+    link rel="icon" type="image/png" href="/favicons/android-chrome-192x192.png" sizes="192x192">
+    link rel="icon" type="image/png" href="/favicons/favicon-96x96.png" sizes="96x96"
     link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32"
     link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16"
+    link rel="manifest" href="/favicons/android-chrome-manifest.json"
+    meta name="msapplication-TileColor" content="#f4b528"
+    meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png"
 
-    link rel="apple-touch-icon-precomposed" sizes="144x144" href=""
-    meta name="msapplication-TileImage" content=""
     meta name="theme-color" content="#F4B528"
     / ToDo: Remove before 'real' launch
     meta name="robots" content="noindex"
