for #102 - prevent geocoding errors from being visible to the user

--- a/app/assets/javascripts/gmaps_search_results.coffee.erb
+++ b/app/assets/javascripts/gmaps_search_results.coffee.erb
@@ -12,6 +12,7 @@ initialize = ->
 
     # Create Markers
     for key, markerData of markers
+      continue unless markerData.position
       markerPosition = new google.maps.LatLng(
         markerData.position.latitude,
         markerData.position.longitude
