--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -14,7 +14,7 @@
 
       section.section-content.section-content--nextsteps
         h3.section-content__title
-          | <i class='fa fa-hand-o-right'></i>
+          i.fa.fa-hand-o-right
           | Nächste Schritte
         .section-content__body
           p== @offer.next_steps
