Minor text change

--- a/app/views/offers/invalid_location.html.slim
+++ b/app/views/offers/invalid_location.html.slim
@@ -1,7 +1,5 @@
 h1
-  | Standort "
-  = params['search_form']['search_location']
-  | " nicht gefunden
+  | Leider konnten wir den von dir eingegeben Standort nicht finden
 
 p
   | Bitte überprüfe noch mal die von dir eingegebenen Adressdaten und versuche
