--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -19,4 +19,4 @@
                                       class: 'JS-Search-location',
                                       value: default_geolocation }
   = f.input :tags, as: :hidden
-  button.main-search__submit Suchen
+  button.main-search__submit = t 'shared.search.button'
