--- a/app/views/organizations/show.html.slim
+++ b/app/views/organizations/show.html.slim
@@ -9,12 +9,12 @@
     .section-wrapper-major
 
       section.section-content.section-content--who
-        h3.section-content__title Wer
+        h3.section-content__title = t 'organizations.show.who'
         .section-content__body
           p= @organization.description
       - if @organization.offers.approved.any?
         section.section-content.section-content--alloffers
-          h3.section-content__title Alle Angebote der Organisation
+          h3.section-content__title = t 'organizations.show.offers_all'
           .section-content__body
             ul.Listing-offers__list
               - @organization.offers.approved.each do |offer|
@@ -25,7 +25,7 @@
 
       - if location
         section.section-content.section-content--where
-          h3.section-content__title Wo
+          h3.section-content__title = t 'organizations.show.where'
           .section-content__body
             /! http://microformats.org/wiki/adr start
             .adr
