Add second set of translations

--- a/app/views/offers/invalid_location.html.slim
+++ b/app/views/offers/invalid_location.html.slim
@@ -1,6 +1,3 @@
-h1
-  | Leider konnten wir den von dir eingegeben Standort nicht finden
+h1 = t 'offers.invalid_location.title'
 
-p
-  | Bitte überprüfe noch mal die von dir eingegebenen Adressdaten und versuche
-  | gegebenenfalls mit einer alternativen Eingabe (z.B. "Postleitzahl Ort").
+p = t 'offers.invalid_location.text'
