--- a/app/views/pages/faq.html.slim
+++ b/app/views/pages/faq.html.slim
@@ -1,4 +1,4 @@
 - provide(:title, 'Häufige Fragen')
 main.content-main.content-main--wide
   .wrapper-inner
-    h1 FAQ
+    h1 = t 'pages.faq.title'
