--- a/app/views/pages/privacy.html.slim
+++ b/app/views/pages/privacy.html.slim
@@ -1,4 +1,4 @@
 - provide(:title, 'Datenschutz')
 main.content-main.content-main--wide
   .wrapper-inner
-    h1 Privacy Policy
+    h1 = t 'pages.privacy.title'
