--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -3,8 +3,8 @@ header.header-main.header-main--wide
     h1.Logo.Logo--start = link_to "clarat.org", '/'
 
     .Claim
-      h2.Claim__firstrow Einfach Hilfe finden
-      h3.Claim__secondrow Unterstützungsangebote für Kinder, Jugendliche und Familien
+      h2.Claim__firstrow = t 'shared.navigation.first_row'
+      h3.Claim__secondrow = t 'shared.navigation.second_row'
 
   .header-main__stage
     / Optional stage for animations
@@ -16,7 +16,7 @@ header.header-main.header-main--wide
       = render '/offers/shared/search_form', search_cache: search_cache
 
       nav.nav-sections
-        h3.nav-sections__headline Oder suche nach Kategorien:
+        h3.nav-sections__headline = t 'shared.distributor.sections_headline'
 
         ul.nav-sections__list
           - Tag.mains.each do |main_tag|
