Fix last commit

--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -3,8 +3,8 @@ header.header-main.header-main--wide
     h1.Logo.Logo--start = link_to "clarat.org", '/'
 
     .Claim
-      h2.Claim__firstrow = t 'shared.navigation.first_row'
-      h3.Claim__secondrow = t 'shared.navigation.second_row'
+      h2.Claim__firstrow = t 'shared.navigation.claim.first_row'
+      h3.Claim__secondrow = t 'shared.navigation.claim.second_row'
 
   .header-main__stage
     / Optional stage for animations
