--- a/app/views/offers/invalid_location.html.slim
+++ b/app/views/offers/invalid_location.html.slim
@@ -1,3 +1,5 @@
-h1 = t 'offers.invalid_location.title'
+main.content-main.content-main--wide.content-main--invalid_location
+  .wrapper-inner
+    h2 = t 'offers.invalid_location.title'
+    p = t 'offers.invalid_location.text'
 
-p = t 'offers.invalid_location.text'
