Change twitter-typeahead positioning to relative

--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -300,22 +300,29 @@
 
 	// Twitter Typeahead ###########################
 
-	.twitter-typeahead {
-		span.tt-dropdown-menu { // specificity, overriding JS
-			background: $brand_beige;
-			position: relative !important;
-			right: 0 !important; // overriding JS
-			margin-bottom: 10px;
+	.template--pages-home {
+
+		.twitter-typeahead {
+			span.tt-dropdown-menu {
+				// specificity, overriding JS
+				background: $brand_beige;
+				position: relative !important;
+				right: 0 !important; // overriding JS
+				margin-bottom: 10px;
+			}
 		}
-	}
 
-	.template--pages-home #new_search_form .input.string {
-		height: auto !important;
-		min-height: 40px;
-	}
+		#new_search_form  {
+			.input.string {
+				height: auto !important;
+				min-height: 40px;
 
-	.template--pages-home #new_search_form .input.string.search_form_search_location {
-		margin: 10px 0;
+				&.search_form_search_location {
+					margin: 10px 0;
+				}
+			}
+		}
+
 	}
 
 	// Footer ######################################
